Layout improvements, especially to improve the layout issues on certain tablets.

--- a/demos/warholiser/styles/style.css
+++ b/demos/warholiser/styles/style.css
@@ -1,3 +1,8 @@
+@-o-viewport {
+  width: device-width;
+  height: device-height;
+}
+
 @font-face {
     font-family: 'NobileRegular';
     src: url('../fonts/nobile-webfont.eot');
@@ -10,16 +15,23 @@
 }
 
 
-@-o-viewport {
-  width: device-width;
-  height: device-height;
+@font-face {
+    font-family: 'DanielRegular';
+    src: url('../fonts/daniel-webfont.eot');
+    src: url('../fonts/daniel-webfont.eot?#iefix') format('embedded-opentype'),
+         url('../fonts/daniel-webfont.woff') format('woff'),
+         url('../fonts/daniel-webfont.ttf') format('truetype'),
+         url('../fonts/daniel-webfont.svg#DanielRegular') format('svg');
+    font-weight: normal;
+    font-style: normal;
+
 }
 
 
 body{
 	background-color: #999;
 	background-image: url('../images/back2.png');
-	font-family: "NobileRegular", sans-serif;
+	font-family: "DanielRegular";
 	margin: 0;
 	padding: 0;
 	height: 100%;
@@ -27,12 +39,8 @@ body{
 }
 
 #container{
-	background-color: #ccc;
-	background-image: -o-linear-gradient(#333, #000) !important;
-	background-image: -webkit-linear-gradient(#333, #000) !important;
-	background-image: -moz-linear-gradient(#333, #000) !important;
-	background-image: -ms-linear-gradient(#333, #000) !important;
-	background-image: linear-gradient(#333, #000) !important;
+	background-color: #3c3c3c;
+
 	width: 610px;
 	margin-top: 25px;
 	margin-left: auto;
@@ -42,12 +50,11 @@ body{
 	border-right:  1px solid #333;
 	height: 100%;
 	text-align: center;
-	text-shadow: 1px 1px 3px #333;
 	border-bottom: 1px solid #333;
 	border-top: 1px solid #333;
 	box-shadow: 1px 12px 10px #222;
 	border-radius: 5px;
-	opacity: 0.9;
+	opacity: 0.8;
 }
 
 
@@ -139,8 +146,8 @@ canvas{
 
 
 h1{		
-		font-family: "NobileRegular", sans-serif;
-	    font-size: 1.6em;
+	    font-family: 'DanielRegular';
+	    font-size: 1.8em;
 }
 
 code{
@@ -215,7 +222,7 @@ canvas{
 }
 
 h1{
-	font-size: 1.6em;
+	font-size: 2.5em;
 }
 
 }
